# claude_Agent

./: .env.example  .gitignore  README.md  pyproject.toml  使用指南.md
examples/: basic_usage.py  custom_tool.py
src/claude_agent/: __init__.py  __main__.py  main.py
src/claude_agent/config/: __init__.py  default.yaml  settings.py
src/claude_agent/core/: __init__.py  agent.py  executor.py  planner.py  types.py
src/claude_agent/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
src/claude_agent/memory/: __init__.py  base.py  conversation.py  vector_store.py
src/claude_agent/tools/: __init__.py  base.py  registry.py
src/claude_agent/tools/builtin/: __init__.py  file_tools.py  python_tools.py  search_tools.py  shell_tools.py  web_tools.py
src/claude_agent/utils/: __init__.py  logger.py  token_counter.py
tests/: test_agent.py  test_memory.py  test_tools.py
