[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-agent"
version = "0.1.0"
description = "A modular, multi-provider Python AI Agent framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Claude Agent Team"}]

dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
claude-agent = "claude_agent.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
